# st-dialog-close-detector

./: README.md  demo.py  pyproject.toml
src/st_dialog_close_detector/: __init__.py
src/st_dialog_close_detector/frontend/src/: main.js
tests/: __init__.py  sample_app.py
