[project]
name = "st-dialog-close-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kelvin Ng", email = "hoishing@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.44.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "watchdog>=6.0.0",
]
